2007-09-10  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Database/AddinDatabase.cs: Fix bug in
	  InternalGetInstalledAddins. It should return root addins when Type is
	  set to Root.

2007-09-10  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Description/AddinDescription.cs: Improved error message.

2007-08-14  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Database/AddinDatabase.cs: Fixed file filter for getting all
	  add-ins with a given name.

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/TreeNode.cs, Mono.Addins/ExtensionContext.cs: When activating
	  an add-in (maybe as a result of a registry update), make sure only
	  loaded extension points are updated.

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/AddinRegistry.cs: Create host addin files in a directory
	  inside the database.
	* Mono.Addins.Database/AddinDatabase.cs: Bump add-in database version.
	  Removed debug code.

2007-08-08  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/TreeNodeCollection.cs, Mono.Addins/TreeNode.cs: Clone the node
	  children list when notifying the add-in load event since it may change.

2007-08-08  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/AddinRegistry.cs, Mono.Addins.Database/AddinDatabase.cs: Fix
	  problem about the current registry domain not being properly set when
	  the add-in database is regenerated due to an internal check.

2007-08-07  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Database/AddinDatabase.cs,
	  Mono.Addins.Database/AddinHostIndex.cs,
	  Mono.Addins.Database/AddinScanFolderInfo.cs,
	  Mono.Addins.Database/AddinScanner.cs,
	  Mono.Addins.Database/AddinUpdateData.cs,
	  Mono.Addins.Database/FileDatabase.cs,
	  Mono.Addins.Description/AddinDescription.cs,
	  Mono.Addins.Description/Extension.cs,
	  Mono.Addins.Description/ExtensionNodeSet.cs, Mono.Addins.mdp,
	  Mono.Addins/Addin.cs, Mono.Addins/AddinManager.cs,