@@ -1,3 +1,7 @@
+2007-09-13  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* Mono.Addins/Addin.cs: Fix issue in CompareVersions.
+
 2007-09-10  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* Mono.Addins.Database/AddinDatabase.cs: Fix bug in
